casa-account-v1: read cassandra and secure bundle from k8s secret (instead of adding the file to container image during build)